--- a/webPage/pages/index.html
+++ b/webPage/pages/index.html
@@ -4,20 +4,14 @@
     <meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<title>MAD|主页</title>
-	
+
 	<!-- Favicon -->
 	<link rel="shortcut icon" href="../img/favicon.png">
 	<link rel="icon" href="../img/favicon.png" type="image/x-icon">
-	
-	<!-- Data table CSS -->
-	<link href="../vendors/bower_components/datatables/media/css/jquery.dataTables.min.css" rel="stylesheet" type="text/css"/>
-	
-	<!-- Toast CSS -->
-	<link href="../vendors/bower_components/jquery-toast-plugin/dist/jquery.toast.min.css" rel="stylesheet" type="text/css">
-
 	<!-- Morris Charts CSS -->
     <link href="../vendors/bower_components/morris.js/morris.css" rel="stylesheet" type="text/css"/>
-
+    <!-- vector map CSS -->
+	<link href="../vendors/vectormap/jquery-jvectormap-2.0.2.css" rel="stylesheet" type="text/css"/>
 	<!-- Custom CSS -->
 	<link href="dist/css/style.css" rel="stylesheet" type="text/css">
 </head>
@@ -28,7 +22,7 @@
 		<div class="la-anim-1"></div>
 	</div>
 	<!-- /Preloader -->
-    <div class="wrapper theme-6-active pimary-color-pink">
+    <div class="wrapper theme-6-active pimary-color-blue slide-nav-toggle">
 		<!-- Top Menu Items -->
 		<nav class="navbar navbar-inverse navbar-fixed-top">
 			<div class="mobile-only-brand pull-left">
@@ -36,187 +30,142 @@
 					<div class="logo-wrap">
 						<a target="_blank" href="index.html">
 							<img class="brand-img" src="../img/logo.png" alt="brand"/>
-							<span class="brand-text">MAD</span>
+                            <span class="brand-text">MAD</span>
 						</a>
 					</div>
 				</div>
-				<a id="toggle_nav_btn" class="toggle-left-nav-btn inline-block ml-20 pull-left" href="javascript:void(0);"><i class="zmdi zmdi-menu"></i></a>
-				<a id="toggle_mobile_nav" class="mobile-only-view" href="javascript:void(0);"><i class="zmdi zmdi-more"></i></a>
 			</div>
 		</nav>
 		<!-- /Top Menu Items -->
-
-		<!-- Left Sidebar Menu -->
-		<div class="fixed-sidebar-left">
-			<ul class="nav navbar-nav side-nav nicescroll-bar">
-				<li class="navigation-header">
-					<span>主页</span>
-					<i class="zmdi zmdi-more"></i>
-				</li>
-				<li>
-					<a target="_blank" class="active" href="index.html"><div class="pull-left"><i class="zmdi zmdi-star-circle mr-20"></i><span class="right-nav-text">主页</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
-				</li>
-				<li>
-					<a target="_blank" href="abstract.html"><div class="pull-left"><i class="zmdi zmdi-chart mr-20"></i><span class="right-nav-text">概要统计</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
-				</li>
-				<li><hr class="light-grey-hr mb-10"/></li>
-				<li class="navigation-header">
-					<span>统计</span>
-					<i class="zmdi zmdi-more"></i>
-				</li>
-				<li>
-					<a target="_blank" href="detail.html"><div class="pull-left"><i class="zmdi zmdi-view-list-alt mr-20"></i><span class="right-nav-text">检测结果</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
-				</li>
-				<li>
-					<a target="_blank" href="inner_detail.html"><div class="pull-left"><i class="zmdi zmdi-view-list-alt mr-20"></i><span class="right-nav-text">内网IP信息</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
-				</li>
-				<li>
-					<a target="_blank" href="ua_detail.html"><div class="pull-left"><i class="zmdi zmdi-view-list-alt mr-20"></i><span class="right-nav-text">UA详细信息</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
-				</li>
-				<li>
-					<a target="_blank" href="outer_detail.html"><div class="pull-left"><i class="zmdi zmdi-view-list-alt mr-20"></i><span class="right-nav-text">通信服务器信息</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
-				</li>
-				<li><hr class="light-grey-hr mb-10"/></li>
-				<li class="navigation-header">
-					<span>关于</span>
-					<i class="zmdi zmdi-more"></i>
-				</li>
-				<li>
-					<a target="_blank" href="usage.html"><div class="pull-left"><i class="zmdi zmdi-pin-help mr-20"></i><span class="right-nav-text">使用方法</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
-				</li>
-				<li>
-					<a target="_blank" href="intro.html"><div class="pull-left"><i class="zmdi zmdi-puzzle-piece mr-20"></i><span class="right-nav-text">系统介绍</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
-				</li>
-				<li>
-					<a target="_blank" href="about.html"><div class="pull-left"><i class="zmdi zmdi-accounts mr-20"></i><span class="right-nav-text">关于我们</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
-				</li>
-				<li>
-					<a target="_blank" href="download.html"><div class="pull-left"><i class="zmdi zmdi-download mr-20"></i><span class="right-nav-text">下载专区</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
-				</li>
-				<li><hr class="light-grey-hr mb-10"/></li>
-			</ul>
-		</div>
-		<!-- /Left Sidebar Menu -->
 
         <!-- Main Content -->
 		<div class="page-wrapper">
             <div class="container-fluid pt-25">
 
-				<!-- Title -->
-				<div class="row heading-bg">
-					<div class="col-lg-3 col-md-4 col-sm-4 col-xs-12">
-					  <h5 class="txt-dark">MAD</h5>
-					</div>
-					<!-- Breadcrumb -->
-					<div class="col-lg-9 col-sm-8 col-md-8 col-xs-12">
-					  <ol class="breadcrumb">
-						<li class="active"><span>Malicious</span></li>
-						<li class="active"><span>Application</span></li>
-						<li class="active"><span>Detector</span></li>
-					  </ol>
-					</div>
-					<!-- /Breadcrumb -->
-				</div>
-				<!-- /Title -->
-
-				<!-- Row -->
 				<div class="row">
-					<div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
-						<a href="inner_detail.html" target="_blank">
-							<div class="panel panel-default card-view pa-0 bg-gradient">
-								<div class="panel-wrapper collapse in">
-									<div class="panel-body pa-0">
-										<div class="sm-data-box">
-											<div class="container-fluid">
-												<div class="row">
-													<div class="col-xs-8 text-center pl-0 pr-0 data-wrap-left">
-														<span class="txt-light block counter">内网IP统计</span>
-														<span class="weight-500 uppercase-font block font-13 txt-light">点此进入</span>
-													</div>
-													<div class="col-xs-4 text-center  pl-0 pr-0 data-wrap-right">
-														<i class="icon-screen-desktop  data-right-rep-icon txt-light"></i>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
+					<div class="col-sm-12">
+						<div class="well well-lg card-view">
+							<h1 class="panel-title txt-dark text-center">主页</h1>
+							<div class="row mt-25">
+								<div class="col-sm-1 col-xs-0 mt-15"></div>
+								<div class="col-sm-2 col-xs-6 mt-15">
+									<button class="btn btn-default btn-rounded btn-block disabled">
+										<span class="btn-text">主页</span>
+									</button>
 								</div>
-							</div>
-						</a>
-					</div>
-					<div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
-						<a href="ua_detail.html" target="_blank">
-							<div class="panel panel-default card-view pa-0 bg-gradient1">
-								<div class="panel-wrapper collapse in">
-									<div class="panel-body pa-0">
-										<div class="sm-data-box">
-											<div class="container-fluid">
-												<div class="row">
-													<div class="col-xs-8 text-center pl-0 pr-0 data-wrap-left">
-														<span class="txt-light block counter">UA类别统计</span>
-														<span class="weight-500 uppercase-font block txt-light">点此进入</span>
-													</div>
-													<div class="col-xs-4 text-center  pl-0 pr-0 data-wrap-right">
-														<i class="icon-grid data-right-rep-icon txt-light"></i>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
+								<div class="col-sm-2 col-xs-6 mt-15">
+									<button class="btn btn-success btn-rounded btn-block btn-anim" onclick="window.location='inner_detail.html'">
+										<i class="icon-screen-desktop"></i>
+										<span class="btn-text">主机检测</span>
+									</button>
 								</div>
-							</div>
-						</a>
-					</div>
-					<div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
-						<a href="outer_detail.html" target="_blank">
-							<div class="panel panel-default card-view pa-0 bg-gradient2">
-								<div class="panel-wrapper collapse in">
-									<div class="panel-body pa-0">
-										<div class="sm-data-box">
-											<div class="container-fluid">
-												<div class="row">
-													<div class="col-xs-8 text-center pl-0 pr-0 txt-light data-wrap-left">
-														<span class="block counter">通信服务器统计</span>
-														<span class="weight-500 uppercase-font block">点此进入</span>
-													</div>
-													<div class="col-xs-4 text-center  pl-0 pr-0 txt-light data-wrap-right">
-														<i class="icon-globe data-right-rep-icon"></i>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
+								<div class="col-sm-2 col-xs-6 mt-15">
+									<button class="btn btn-success btn-rounded btn-block btn-anim" onclick="window.location='ua_detail.html'">
+										<i class="icon-grid"></i>
+										<span class="btn-text">恶意软件</span>
+									</button>
 								</div>
+								<div class="col-sm-2 col-xs-6 mt-15">
+									<button class="btn btn-success btn-rounded btn-block btn-anim" onclick="window.location='outer_detail.html'">
+										<i class="glyphicon glyphicon-cloud"></i>
+										<span class="btn-text">恶意服务器</span>
+									</button>
+								</div>
+								<div class="col-sm-2 col-xs-6 mt-15">
+									<button class="btn btn-warning btn-rounded btn-block btn-anim" onclick="window.location='more.html'">
+										<i class="ti-more-alt"></i>
+										<span class="btn-text">更多</span>
+									</button>
+								</div>
+								<div class="col-sm-1 col-xs-0 mt-15"></div>
 							</div>
-						</a>
+						</div>
 					</div>
-					<div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
-						<a href="intro.html" target="_blank">
-							<div class="panel panel-default card-view pa-0 bg-gradient3">
-								<div class="panel-wrapper collapse in">
-									<div class="panel-body pa-0">
-										<div class="sm-data-box">
-											<div class="container-fluid">
-												<div class="row">
-													<div class="col-xs-8 text-center pl-0 pr-0 data-wrap-left">
-														<span class="txt-light block counter">系统创新点</span>
-														<span class="weight-500 uppercase-font block txt-light">点此进入</span>
-													</div>
-													<div class="col-xs-4 text-center  pl-0 pr-0 pt-25  data-wrap-right">
-														<i class="icon-bulb data-right-rep-icon txt-light"></i>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
+				</div>
+
+				<div class="row">
+					<div class="col-lg-6">
+						<div class="panel panel-default card-view">
+							<div class="panel-heading">
+								<div class="pull-left">
+									<h6 class="panel-title txt-dark">感染主机数量变化</h6>
+								</div>
+								<div class="clearfix"></div>
+							</div>
+							<div class="panel-wrapper collapse in">
+								<div id="infected_computer" class="morris-chart"></div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-6">
+						<div class="panel panel-default card-view">
+							<div class="panel-heading">
+								<div class="pull-left">
+									<h6 class="panel-title txt-dark">活动软件数量变化</h6>
+								</div>
+								<div class="clearfix"></div>
+							</div>
+							<div class="panel-wrapper collapse in">
+								<div id="active_software" class="morris-chart"></div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="col-lg-12">
+						<div class="panel panel-default card-view">
+							<div class="panel-heading">
+								<div class="pull-left">
+									<h6 class="panel-title txt-dark">loss变化</h6>
+								</div>
+								<div class="clearfix"></div>
+							</div>
+							<div class="panel-wrapper collapse in">
+								<div id="loss" class="morris-chart"></div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="col-lg-12">
+                        <div class="panel panel-default card-view">
+							<div class="panel-heading">
+								<div class="pull-left">
+									<h6 class="panel-title txt-dark">恶意服务器分布</h6>
+								</div>
+								<div class="clearfix"></div>
+							</div>
+							<div class="panel-wrapper collapse in">
+								<div class="panel-body">
+									<div id="world_map_marker_1" style="height: 600px"></div>
 								</div>
 							</div>
 						</div>
-					</a>
+                    </div>
 				</div>
-				<!-- /Row -->
+
+				<div class="row">
+					<div class="col-lg-12">
+						<div class="panel panel-default card-view panel-refresh">
+							<div class="panel-heading">
+								<div class="pull-left">
+									<h6 class="panel-title txt-dark">主机-服务器连接图</h6>
+								</div>
+								<div class="clearfix"></div>
+							</div>
+							<div class="panel-wrapper collapse in">
+								<div class="panel-body">
+									<div id="e_chart_1" class="" style="height:800px;"></div>
+								</div>
+							</div>
+						</div>
+					</div>
+
+				</div>
 			</div>
-			
+
 			<!-- Footer -->
 			<footer class="footer container-fluid pl-30 pr-30">
 				<div class="row">
@@ -226,58 +175,130 @@
 				</div>
 			</footer>
 			<!-- /Footer -->
-			
+
 		</div>
         <!-- /Main Content -->
 
     </div>
     <!-- /#wrapper -->
-	
+
 	<!-- JavaScript -->
-	
+
     <!-- jQuery -->
     <script src="../vendors/bower_components/jquery/dist/jquery.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="../vendors/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    
-	<!-- Data table JavaScript -->
-	<script src="../vendors/bower_components/datatables/media/js/jquery.dataTables.min.js"></script>
-	
-	<!-- Slimscroll JavaScript -->
-	<script src="dist/js/jquery.slimscroll.js"></script>
-	
-	<!-- Progressbar Animation JavaScript -->
-	<script src="../vendors/bower_components/waypoints/lib/jquery.waypoints.min.js"></script>
-	<script src="../vendors/bower_components/jquery.counterup/jquery.counterup.min.js"></script>
-	
-	<!-- Fancy Dropdown JS -->
-	<script src="dist/js/dropdown-bootstrap-extended.js"></script>
-	
-	<!-- Sparkline JavaScript -->
-	<script src="../vendors/jquery.sparkline/dist/jquery.sparkline.min.js"></script>
-	
-	<!-- Owl JavaScript -->
-	<script src="../vendors/bower_components/owl.carousel/dist/owl.carousel.min.js"></script>
-	
-	<!-- Toast JavaScript -->
-	<script src="../vendors/bower_components/jquery-toast-plugin/dist/jquery.toast.min.js"></script>
-	
-	<!-- EChartJS JavaScript -->
-	<script src="../vendors/bower_components/echarts/dist/echarts-en.min.js"></script>
-	<script src="../vendors/echarts-liquidfill.min.js"></script>
-	
-	<!-- Switchery JavaScript -->
-	<script src="../vendors/bower_components/switchery/dist/switchery.min.js"></script>
-	
-	<!-- Init JavaScript -->
-	<script src="dist/js/index/init.js"></script>
-	<script src="dist/js/dashboard-data.js"></script>
+
+	<!-- Vector Maps JavaScript -->
+    <script src="../vendors/vectormap/jquery-jvectormap-2.0.2.min.js"></script>
+    <script src="../vendors/vectormap/jquery-jvectormap-world-mill-en.js"></script>
+    <script src="../vendors/vectormap/jquery-jvectormap-in-mill.js"></script>
+    <script src="../vendors/vectormap/jquery-jvectormap-uk-mill-en.js"></script>
+    <script src="../vendors/vectormap/jquery-jvectormap-us-aea-en.js"></script>
+    <script src="../vendors/vectormap/jquery-jvectormap-au-mill.js"></script>
+    <script src="dist/js/index_map.js"></script>
 
     <!-- Morris Charts JavaScript -->
     <script src="../vendors/bower_components/raphael/raphael.min.js"></script>
     <script src="../vendors/bower_components/morris.js/morris.min.js"></script>
-    <script src="dist/js/morris-data.js"></script>
+    <script src="dist/js/index_data.js"></script>
+
+	<!-- Slimscroll JavaScript -->
+	<script src="dist/js/jquery.slimscroll.js"></script>
+
+	<!-- Fancy Dropdown JS -->
+	<script src="dist/js/dropdown-bootstrap-extended.js"></script>
+
+	<!-- Owl JavaScript -->
+	<script src="../vendors/bower_components/owl.carousel/dist/owl.carousel.min.js"></script>
+
+	<!-- Switchery JavaScript -->
+	<script src="../vendors/bower_components/switchery/dist/switchery.min.js"></script>
+
+	<!-- Init JavaScript -->
+	<script src="dist/js/index_init.js"></script>
+
+	<script src="dist/js/echarts.min.js"></script>
+	<script src="dist/js/dataTool.min.js"></script>
+	<script type="text/javascript">
+		var dom = document.getElementById("e_chart_1");
+		var myChart = echarts.init(dom);
+		option = null;
+		myChart.showLoading();
+//		$.get('testFiles/LesMiserables.gexf', function (xml) {
+		$.get('testFiles/les-miserables.gexf', function (xml) {
+			myChart.hideLoading();
+
+			var graph = echarts.dataTool.gexf.parse(xml);
+			var categories = [];
+			for (var i = 0; i < 10; i++) {
+				categories[i] = {
+					name: '类目' + i
+				};
+			}
+			graph.nodes.forEach(function (node) {
+				node.itemStyle = null;
+				node.value = node.symbolSize;
+				node.symbolSize /= 1.5;
+				node.label = {
+					normal: {
+						show: node.symbolSize > 30
+					}
+				};
+				node.category = node.attributes.modularity_class;
+			});
+			option = {
+				tooltip: {},
+				legend: [{
+					// selectedMode: 'single',
+					data: categories.map(function (a) {
+						return a.name;
+					})
+				}],
+				animationDuration: 1500,
+				animationEasingUpdate: 'quinticInOut',
+				series : [
+					{
+						name: 'Les Miserables',
+						type: 'graph',
+						layout: 'none',
+						data: graph.nodes,
+						links: graph.links,
+						categories: categories,
+						roam: true,
+						focusNodeAdjacency: true,
+						itemStyle: {
+							normal: {
+								borderColor: '#fff',
+								borderWidth: 1,
+								shadowBlur: 10,
+								shadowColor: 'rgba(0, 0, 0, 0.3)'
+							}
+						},
+						label: {
+							position: 'right',
+							formatter: '{b}'
+						},
+						lineStyle: {
+							color: 'source',
+							curveness: 0.3
+						},
+						emphasis: {
+							lineStyle: {
+								width: 10
+							}
+						}
+					}
+				]
+			};
+
+			myChart.setOption(option);
+		}, 'xml');
+		if (option && typeof option === "object") {
+			myChart.setOption(option, true);
+		}
+	</script>
 </body>
 
 </html>
