--- a/webPage/pages/inner_detail.html
+++ b/webPage/pages/inner_detail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-	<title>MAD|内网IP信息</title>
+	<title>MAD|主机检测</title>
 
 	<!-- Favicon -->
 	<link rel="shortcut icon" href="../img/favicon.png">
@@ -11,9 +11,6 @@
 
 	<!-- Data table CSS -->
 	<link href="../vendors/bower_components/datatables/media/css/jquery.dataTables.min.css" rel="stylesheet" type="text/css"/>
-
-	<!-- vector map CSS -->
-	<link href="../vendors/vectormap/jquery-jvectormap-2.0.2.css" rel="stylesheet" type="text/css"/>
 
 	<!-- Custom CSS -->
 	<link href="dist/css/style.css" rel="stylesheet" type="text/css">
@@ -26,7 +23,7 @@
 		<div class="la-anim-1"></div>
 	</div>
 	<!-- /Preloader -->
-    <div class="wrapper theme-6-active pimary-color-pink">
+    <div class="wrapper theme-6-active pimary-color-blue slide-nav-toggle">
 		<!-- Top Menu Items -->
 		<nav class="navbar navbar-inverse navbar-fixed-top">
 			<div class="mobile-only-brand pull-left">
@@ -34,88 +31,58 @@
 					<div class="logo-wrap">
 						<a target="_blank" href="index.html">
 							<img class="brand-img" src="../img/logo.png" alt="brand"/>
-							<span class="brand-text">MAD</span>
+                            <span class="brand-text">MAD</span>
 						</a>
 					</div>
 				</div>
-				<a id="toggle_nav_btn" class="toggle-left-nav-btn inline-block ml-20 pull-left" href="javascript:void(0);"><i class="zmdi zmdi-menu"></i></a>
-				<a id="toggle_mobile_nav" class="mobile-only-view" href="javascript:void(0);"><i class="zmdi zmdi-more"></i></a>
 			</div>
 		</nav>
 		<!-- /Top Menu Items -->
-
-		<!-- Left Sidebar Menu -->
-		<div class="fixed-sidebar-left">
-			<ul class="nav navbar-nav side-nav nicescroll-bar">
-				<li class="navigation-header">
-					<span>主页</span>
-					<i class="zmdi zmdi-more"></i>
-				</li>
-				<li>
-					<a target="_blank" href="index.html"><div class="pull-left"><i class="zmdi zmdi-star-circle mr-20"></i><span class="right-nav-text">主页</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
-				</li>
-				<li>
-					<a target="_blank" href="abstract.html"><div class="pull-left"><i class="zmdi zmdi-chart mr-20"></i><span class="right-nav-text">概要统计</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
-				</li>
-				<li><hr class="light-grey-hr mb-10"/></li>
-				<li class="navigation-header">
-					<span>统计</span>
-					<i class="zmdi zmdi-more"></i>
-				</li>
-				<li>
-					<a target="_blank" href="detail.html"><div class="pull-left"><i class="zmdi zmdi-view-list-alt mr-20"></i><span class="right-nav-text">检测结果</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
-				</li>
-				<li>
-					<a target="_blank" class="active" href="inner_detail.html"><div class="pull-left"><i class="zmdi zmdi-view-list-alt mr-20"></i><span class="right-nav-text">内网IP信息</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
-				</li>
-				<li>
-					<a target="_blank" href="ua_detail.html"><div class="pull-left"><i class="zmdi zmdi-view-list-alt mr-20"></i><span class="right-nav-text">UA详细信息</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
-				</li>
-				<li>
-					<a target="_blank" href="outer_detail.html"><div class="pull-left"><i class="zmdi zmdi-view-list-alt mr-20"></i><span class="right-nav-text">通信服务器信息</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
-				</li>
-				<li><hr class="light-grey-hr mb-10"/></li>
-				<li class="navigation-header">
-					<span>关于</span>
-					<i class="zmdi zmdi-more"></i>
-				</li>
-				<li>
-					<a target="_blank" href="usage.html"><div class="pull-left"><i class="zmdi zmdi-pin-help mr-20"></i><span class="right-nav-text">使用方法</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
-				</li>
-				<li>
-					<a target="_blank" href="intro.html"><div class="pull-left"><i class="zmdi zmdi-puzzle-piece mr-20"></i><span class="right-nav-text">系统介绍</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
-				</li>
-				<li>
-					<a target="_blank" href="about.html"><div class="pull-left"><i class="zmdi zmdi-accounts mr-20"></i><span class="right-nav-text">关于我们</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
-				</li>
-				<li>
-					<a target="_blank" href="download.html"><div class="pull-left"><i class="zmdi zmdi-download mr-20"></i><span class="right-nav-text">下载专区</span></div><div class="pull-right"></div><div class="clearfix"></div></a>
-				</li>
-				<li><hr class="light-grey-hr mb-10"/></li>
-			</ul>
-		</div>
-		<!-- /Left Sidebar Menu -->
 
         <!-- Main Content -->
 		<div class="page-wrapper">
             <div class="container-fluid pt-25">
 
-				<!-- Title -->
-				<div class="row heading-bg">
-					<div class="col-lg-3 col-md-4 col-sm-4 col-xs-12">
-					  <h5 class="txt-dark">内网IP信息</h5>
+				<div class="row">
+					<div class="col-sm-12">
+						<div class="well well-lg card-view">
+							<h1 class="panel-title txt-dark text-center">主机检测</h1>
+							<div class="row mt-25">
+								<div class="col-sm-1 col-xs-0 mt-15"></div>
+								<div class="col-sm-2 col-xs-6 mt-15">
+									<button class="btn btn-primary btn-rounded btn-block btn-anim" onclick="window.location='index.html'">
+										<i class="fa fa-home"></i>
+										<span class="btn-text">主页</span>
+									</button>
+								</div>
+								<div class="col-sm-2 col-xs-6 mt-15">
+									<button class="btn btn-default btn-rounded btn-block disabled">
+										<span class="btn-text">主机检测</span>
+									</button>
+								</div>
+								<div class="col-sm-2 col-xs-6 mt-15">
+									<button class="btn btn-success btn-rounded btn-block btn-anim" onclick="window.location='ua_detail.html'">
+										<i class="icon-grid"></i>
+										<span class="btn-text">恶意软件</span>
+									</button>
+								</div>
+								<div class="col-sm-2 col-xs-6 mt-15">
+									<button class="btn btn-success btn-rounded btn-block btn-anim" onclick="window.location='outer_detail.html'">
+										<i class="glyphicon glyphicon-cloud"></i>
+										<span class="btn-text">恶意服务器</span>
+									</button>
+								</div>
+								<div class="col-sm-2 col-xs-6 mt-15">
+									<button class="btn btn-warning btn-rounded btn-block btn-anim" onclick="window.location='more.html'">
+										<i class="ti-more-alt"></i>
+										<span class="btn-text">更多</span>
+									</button>
+								</div>
+								<div class="col-sm-1 col-xs-0 mt-15"></div>
+							</div>
+						</div>
 					</div>
-					<!-- Breadcrumb -->
-					<div class="col-lg-9 col-sm-8 col-md-8 col-xs-12">
-					  <ol class="breadcrumb">
-						<li><a href="index.html">主页</a></li>
-						<li><a href="#"><span>统计</span></a></li>
-						<li class="active"><span>内网IP信息</span></li>
-					  </ol>
-					</div>
-					<!-- /Breadcrumb -->
 				</div>
-				<!-- /Title -->
 
 				<!-- Row -->
 				<div class="row">
@@ -195,21 +162,11 @@
 	<!-- Toast JavaScript -->
 	<script src="../vendors/bower_components/jquery-toast-plugin/dist/jquery.toast.min.js"></script>
 
-	<!-- EChartJS JavaScript -->
-	<script src="../vendors/bower_components/echarts/dist/echarts-en.min.js"></script>
-	<script src="../vendors/echarts-liquidfill.min.js"></script>
-
 	<!-- Switchery JavaScript -->
 	<script src="../vendors/bower_components/switchery/dist/switchery.min.js"></script>
 
 	<!-- Init JavaScript -->
 	<script src="dist/js/index/init.js"></script>
-	<script src="dist/js/dashboard-data.js"></script>
-
-    <!-- Morris Charts JavaScript -->
-    <script src="../vendors/bower_components/raphael/raphael.min.js"></script>
-    <script src="../vendors/bower_components/morris.js/morris.min.js"></script>
-    <script src="dist/js/morris-data.js"></script>
 </body>
 
 </html>
