--- a/webPage/pages/inner_detail.html
+++ b/webPage/pages/inner_detail.html
@@ -113,6 +113,25 @@
 				</div>
 				<!-- /Row -->
 
+				<div class="row">
+					<div class="col-lg-12">
+						<div class="panel panel-default card-view panel-refresh">
+							<div class="panel-heading">
+								<div class="pull-left">
+									<h6 class="panel-title txt-dark">主机-服务器连接图</h6>
+								</div>
+								<div class="clearfix"></div>
+							</div>
+							<div class="panel-wrapper collapse in">
+								<div class="panel-body">
+									<div id="e_chart_1" class="" style="height:800px;"></div>
+								</div>
+							</div>
+						</div>
+					</div>
+
+				</div>
+
 			</div>
 
 			<!-- Footer -->
@@ -167,6 +186,10 @@
 
 	<!-- Init JavaScript -->
 	<script src="dist/js/index/init.js"></script>
+
+	<script src="dist/js/echarts.min.js"></script>
+	<script src="dist/js/dataTool.min.js"></script>
+	<script src="dist/js/inner_data.js"></script>
 </body>
 
 </html>
