--- a/webPage/pages/index.html
+++ b/webPage/pages/index.html
@@ -139,7 +139,7 @@
 							</div>
 							<div class="panel-wrapper collapse in">
 								<div class="panel-body">
-									<div id="world_map_marker_1" style="height: 600px"></div>
+									<div id="world_map_marker_1" class="center-block" style="width: 600px;height: 600px"></div>
 								</div>
 							</div>
 						</div>
