--- a/webPage/pages/inner_detail.html
+++ b/webPage/pages/inner_detail.html
@@ -186,9 +186,9 @@
 	<!-- Init JavaScript -->
 	<script src="dist/js/index/init.js"></script>
 
-	<script src="dist/js/echarts.min.js"></script>
-	<script src="dist/js/dataTool.min.js"></script>
-	<script src="dist/js/inner_data.js"></script>
+	<!--<script src="dist/js/echarts.min.js"></script>-->
+	<!--<script src="dist/js/dataTool.min.js"></script>-->
+	<!--<script src="dist/js/inner_data.js"></script>-->
 </body>
 
 </html>
