--- a/webPage/pages/more.html
+++ b/webPage/pages/more.html
@@ -84,6 +84,14 @@
 					</div>
 				</div>
 
+				<!-- Title -->
+				<div class="row heading-bg">
+					<div class="col-lg-3 col-md-4 col-sm-4 col-xs-12">
+					  <h5 class="txt-dark">下载论文</h5>
+					</div>
+				</div>
+				<!-- /Title -->
+
                 <div class="row">
                     <div class="col-sm-12">
                         <div class="panel panel-default card-view">
@@ -106,6 +114,54 @@
                         </div>
                     </div>
                 </div>
+
+				<!-- Title -->
+				<div class="row heading-bg">
+					<div class="col-lg-3 col-md-4 col-sm-4 col-xs-12">
+					  <h5 class="txt-dark">导出报告</h5>
+					</div>
+				</div>
+				<!-- /Title -->
+
+				<!-- Row -->
+				<div class="row">
+					<div class="col-sm-12">
+						<div class="panel panel-default card-view">
+							<div class="panel-wrapper collapse in">
+								<div class="panel-body">
+									<div class="table-wrap">
+										<div class="table-responsive">
+											<table id="example" class="table table-hover display  pb-30" >
+												<thead>
+													<tr>
+														<th>Src IP</th>
+														<th>Src Port</th>
+														<th>Dst IP</th>
+														<th>Dst Port</th>
+														<th>User-Agent</th>
+														<th>Time</th>
+													</tr>
+												</thead>
+
+												<tbody id="results-display">
+												</tbody>
+											</table>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- /Row -->
+
+				<!-- Title -->
+				<div class="row heading-bg">
+					<div class="col-lg-3 col-md-4 col-sm-4 col-xs-12">
+					  <h5 class="txt-dark">关于我们</h5>
+					</div>
+				</div>
+				<!-- /Title -->
 
                 <div class="row">
 					<div class="col-md-10">
@@ -191,13 +247,23 @@
 
     <!-- jQuery -->
     <script src="../vendors/bower_components/jquery/dist/jquery.min.js"></script>
-
+	<script src="dist/js/download.js"></script>
     <!-- Bootstrap Core JavaScript -->
     <script src="../vendors/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
 	<!-- Data table JavaScript -->
 	<script src="../vendors/bower_components/datatables/media/js/jquery.dataTables.min.js"></script>
     <script src="dist/js/outer_detail.js"></script>
+
+	<script src="../vendors/bower_components/datatables.net-buttons/js/dataTables.buttons.min.js"></script>
+	<script src="../vendors/bower_components/datatables.net-buttons/js/buttons.flash.min.js"></script>
+	<script src="../vendors/bower_components/jszip/dist/jszip.min.js"></script>
+	<script src="../vendors/bower_components/pdfmake/build/pdfmake.min.js"></script>
+	<script src="../vendors/bower_components/pdfmake/build/vfs_fonts.js"></script>
+
+	<script src="../vendors/bower_components/datatables.net-buttons/js/buttons.html5.min.js"></script>
+	<script src="../vendors/bower_components/datatables.net-buttons/js/buttons.print.min.js"></script>
+	<script src="dist/js/export-table-data.js"></script>
 
 	<!-- Slimscroll JavaScript -->
 	<script src="dist/js/jquery.slimscroll.js"></script>
