--- a/webPage/pages/more.html
+++ b/webPage/pages/more.html
@@ -15,10 +15,6 @@
 	<!-- Custom CSS -->
 	<link href="dist/css/style.css" rel="stylesheet" type="text/css">
 
-	<!-- jQuery -->
-    <script src="../vendors/bower_components/jquery/dist/jquery.min.js"></script>
-	<script src="dist/js/download.js"></script>
-
 </head>
 
 <body>
@@ -249,6 +245,8 @@
 	<!-- JavaScript -->
 
 
+    <!-- jQuery -->
+    <script src="../vendors/bower_components/jquery/dist/jquery.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="../vendors/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -264,7 +262,8 @@
 
 	<script src="../vendors/bower_components/datatables.net-buttons/js/buttons.html5.min.js"></script>
 	<script src="../vendors/bower_components/datatables.net-buttons/js/buttons.print.min.js"></script>
-	<script src="dist/js/export-table-data.js"></script>
+	<!--<script src="dist/js/export-table-data.js"></script>-->
+	<script src="dist/js/download.js"></script>
 
 	<!-- Slimscroll JavaScript -->
 	<script src="dist/js/jquery.slimscroll.js"></script>
