--- a/webPage/pages/outer_detail.html
+++ b/webPage/pages/outer_detail.html
@@ -95,7 +95,7 @@
 											<table id="datable_1" class="table table-hover display  pb-30">
 												<thead>
 													<tr>
-														<th>IP地址</th>
+														<th>服务器IP地址</th>
 														<!--<th>类型</th>-->
 														<th>首次活动时间</th>
 														<th>最后活动时间</th>
