--- a/webPage/pages/inner_detail.html
+++ b/webPage/pages/inner_detail.html
@@ -95,7 +95,7 @@
 											<table id="datable_1" class="table table-hover display  pb-30">
 												<thead>
 													<tr>
-														<th>IP地址</th>
+														<th>主机IP地址</th>
 														<th>恶意UA数量</th>
 														<th>查看所有UA</th>
 													</tr>
