--- a/webPage/pages/more.html
+++ b/webPage/pages/more.html
@@ -46,7 +46,7 @@
 				<div class="row">
 					<div class="col-sm-12">
 						<div class="well well-lg card-view">
-							<h1 class="panel-title txt-dark text-center">恶意软件监测系统</h1>
+							<h1 class="panel-title txt-dark text-center" style="font-size: 2em">恶意软件监测系统</h1>
 							<div class="row mt-25">
 								<div class="col-sm-1 col-xs-0 mt-15"></div>
 								<div class="col-sm-2 col-xs-6 mt-15">
@@ -68,7 +68,7 @@
 									</button>
 								</div>
 								<div class="col-sm-2 col-xs-6 mt-15">
-									<button class="btn btn-success btn-rounded btn-block btn-anim" onclick="window.location='more.html'">
+									<button class="btn btn-success btn-rounded btn-block btn-anim" onclick="window.location='outer_detail.html'">
 										<i class="glyphicon glyphicon-cloud"></i>
 										<span class="btn-text">恶意服务器</span>
 									</button>
